I shortened some text and corrected an error where that text overlapped another.

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
 .txtburguer{
     color: var(--off-white);
     position: absolute;
-    top: 50%;
+    top: 45%;
     width: 80%;
     left: 50%;
     transform: translateX(-50%);
@@ -83,7 +83,7 @@ body{
 }
 .titlecardapio{
     color: var(--dourado-claro);
-    font-size: 8vw;
+    font-size: 6vw;
     font-family: fantasy;
     max-width: 90%;
     text-shadow: 0px 0px 20px var(--dourado-escuro);
